[package]
name = "watch_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
rand = "0.8.5"
serde_json = "1.0.93"
#tokio = { path = "../tokio/tokio", features = ["full"] }
tokio = { version="1", features = ["full"] }
